force-app/main/default/objects/Contact/fields/Account_Admin__c.field-meta.xml
<CustomField>
    <fullName>Account_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use patria_lanfranchi@ecovate.com login if need to bulk update this field</description>
    <inlineHelpText>If checked, this is the primary contact for this account.</inlineHelpText>
    <label>Account Admin</label>
    <type>Checkbox</type>
</CustomField>