force-app/main/default/objects/Contact/fields/Acct_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Acct_of_Employees__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct: # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>