force-app/main/default/objects/Contact/fields/Active_Access_Codes__c.field-meta.xml
<CustomField>
    <fullName>Active_Access_Codes__c</fullName>
    <inlineHelpText>Provides a count of active access codes assigned to a contact.</inlineHelpText>
    <label>Active Access Codes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>