force-app/main/default/objects/Contact/fields/Active_FoxDen_Users2__c.field-meta.xml
<CustomField>
    <fullName>Active_FoxDen_Users2__c</fullName>
    <label>Active FoxDen Users</label>
    <summarizedField>FoxDen_User__c.Active_FoxDen_User_Count__c</summarizedField>
    <summaryForeignKey>FoxDen_User__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>