force-app/main/default/objects/Contact/fields/AdminEditing__c.field-meta.xml
<CustomField>
    <fullName>AdminEditing__c</fullName>
    <description>If the admin is editing the record, set this field to equal something. This way, validation can be put on contacts so that the lookup field for departments is not used unless the admin is doing the editing.</description>
    <label>AdminEditing</label>
    <length>10</length>
    <type>Text</type>
</CustomField>