force-app/main/default/objects/Contact/fields/Are_you_a_current_customer__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_current_customer__c</fullName>
    <description>To be used on embedded chat pre-chat form, do not modify or display on page layout</description>
    <label>Are you a current customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>