force-app/main/default/objects/Contact/fields/ASX_User_Type__c.field-meta.xml
<CustomField>
    <fullName>ASX_User_Type__c</fullName>
    <description>Value to ID the customer admins</description>
    <label>ASX User Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>