force-app/main/default/objects/Contact/fields/Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID__c</fullName>
    <description>Account ID that this contact belongs to</description>
    <label>Billing ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>