force-app/main/default/objects/Contact/fields/Buyer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Persona__c</fullName>
    <label>Buyer Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technology Lead - I fix everything...</fullName>
            </value>
            <value>
                <fullName>CIO/CTO - I am the orchestrator...</fullName>
            </value>
            <value>
                <fullName>Business Transformation - I bring everyone together &amp; make things happen...</fullName>
            </value>
            <value>
                <fullName>CEO / MD / President - I run the ship...</fullName>
            </value>
            <value>
                <fullName>Analyst – I study everything…</fullName>
            </value>
            <value>
                <fullName>Architect – I design everything…</fullName>
            </value>
            <value>
                <fullName>Engineer – I build everything…</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Comms – I tell everyone about everything…</fullName>
            </value>
            <value>
                <fullName>Biz Dev – I find the customers…</fullName>
            </value>
            <value>
                <fullName>Sales – I sell everything…</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development - I support everyone…</fullName>
            </value>
            <value>
                <fullName>Management – I keep an eye on everything…</fullName>
            </value>
            <value>
                <fullName>Co-ordinator – I keep everyone together…</fullName>
            </value>
            <value>
                <fullName>Project Management – I make sure it happens on time…</fullName>
            </value>
            <value>
                <fullName>Other – I do something else that is very important…</fullName>
            </value>
            <value>
                <fullName>Carla (Communications Manager)</fullName>
            </value>
            <value>
                <fullName>Jane (Office Manager)</fullName>
            </value>
            <value>
                <fullName>Keith (Chief Information Officer)</fullName>
            </value>
            <value>
                <fullName>Karen (Director of IT)</fullName>
            </value>
            <value>
                <fullName>Matt (Head of Marketing)</fullName>
            </value>
            <value>
                <fullName>Mia (Marketing Manager)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sam (Small Business Owner)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>