force-app/main/default/objects/Contact/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Used to tag a contact with a particular marketing campaign.</description>
    <label>Campaign Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>