force-app/main/default/objects/Contact/fields/Canada_Hidden_Email__c.field-meta.xml
<CustomField>
    <fullName>Canada_Hidden_Email__c</fullName>
    <label>Canada Hidden Email</label>
    <type>Email</type>
</CustomField>