force-app/main/default/objects/Contact/fields/Collab_UC_Acct_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Acct_Intent_Score__c</fullName>
    <label>Collab/UC Acct Intent Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>