force-app/main/default/objects/Contact/fields/Collab_UC_Contact_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Contact_Intent_Score__c</fullName>
    <label>Collab/UC Contact Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>