force-app/main/default/objects/Contact/fields/Collab_UC_Contact_Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>Collab_UC_Contact_Profile_Fit__c</fullName>
    <label>Collab/UC Contact Profile Fit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>