force-app/main/default/objects/Contact/fields/CompanyPay__c.field-meta.xml
<CustomField>
    <fullName>CompanyPay__c</fullName>
    <label>Company Pay?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>