force-app/main/default/objects/Contact/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>