force-app/main/default/objects/Contact/fields/Conference_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_Date__c</fullName>
    <label>Conference Date</label>
    <type>Date</type>
</CustomField>