force-app/main/default/objects/Contact/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <description>COD-1435, Case #872647:  GDPR field with data obtained in Eloqua and passed to Salesforce. Field Mapped from Lead object.</description>
    <label>Consent Date</label>
    <type>Date</type>
</CustomField>