force-app/main/default/objects/Contact/fields/Contact_Department_Kanji__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department_Kanji__c</fullName>
    <label>Contact Department (Kanji)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>