force-app/main/default/objects/Contact/fields/Contact_Name_Kana__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Kana__c</fullName>
    <label>Contact Name (Kana)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>