force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Engaged</fullName>
            </value>
            <value>
                <fullName>Open - Not Yet Contacted</fullName>
            </value>
            <value>
                <fullName>Attempting to Contact</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Return to Marketing</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>