force-app/main/default/objects/Contact/fields/Content_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Content_Most_Recent__c</fullName>
    <description>create a free text field on the lead object and we will populate it directly.</description>
    <label>Content Most Recent</label>
    <type>TextArea</type>
</CustomField>