force-app/main/default/objects/Contact/fields/Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_ID__c</fullName>
    <label>Created By ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>