force-app/main/default/objects/Contact/fields/Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Product__c</fullName>
    <inlineHelpText>This field is a roll up of the current product the Contact&apos;s Access Codes are assigned to.</inlineHelpText>
    <label>Current Product</label>
    <type>TextArea</type>
</CustomField>