force-app/main/default/objects/Contact/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <label>Current Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>Arkadin</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>BlueJeans</fullName>
            </value>
            <value>
                <fullName>BT Conferencing</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>GoToMeeting</fullName>
            </value>
            <value>
                <fullName>GoToWebinar</fullName>
            </value>
            <value>
                <fullName>Intercall</fullName>
            </value>
            <value>
                <fullName>JoinMe</fullName>
            </value>
            <value>
                <fullName>Microsoft Lync</fullName>
            </value>
            <value>
                <fullName>ON24</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
            <value>
                <fullName>Polycom</fullName>
            </value>
            <value>
                <fullName>Skype</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>