force-app/main/default/objects/Contact/fields/Customer_Email_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Un-check if you do not want customer to receive feature and product related emails.</inlineHelpText>
    <label>Feature Updates &amp; Product News Opt-in</label>
    <type>Checkbox</type>
</CustomField>