force-app/main/default/objects/Contact/fields/Customer_No_Longer_There__c.field-meta.xml
<CustomField>
    <fullName>Customer_No_Longer_There__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to be populated by ASX</description>
    <label>Customer No Longer There</label>
    <type>Checkbox</type>
</CustomField>