force-app/main/default/objects/Contact/fields/Customer_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_User_ID__c</fullName>
    <description>User Id from ASX</description>
    <externalId>true</externalId>
    <label>Customer User ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>