force-app/main/default/objects/Contact/fields/Customer_Workspace_Admin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Workspace_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to support product announcements being sent from SFDC and Marketo.  This will be populated via an API from ASX</description>
    <label>Customer Workspace Admin</label>
    <type>Checkbox</type>
</CustomField>