force-app/main/default/objects/Contact/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Date/time the contact is marked as deleted (therefore, inactive in SF &amp; deleted with GX).</description>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>