force-app/main/default/objects/Contact/fields/Date_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Date_Provisioned__c</fullName>
    <label>Date Provisioned</label>
    <type>DateTime</type>
</CustomField>