force-app/main/default/objects/Contact/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <description>PREREQUISITES: You MUST create 2 custom fields, called &quot;Demographic Score&quot; and &quot;Behavior Score&quot; to import this program. These fields should be created in your CRM system, then allowed to sync to Marketo. Program template for creating complete behavior and demographic scoring system.</description>
    <inlineHelpText>Used by Marketo Scoring Program</inlineHelpText>
    <label>Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>