force-app/main/default/objects/Contact/fields/Department_Parent__c.field-meta.xml
<CustomField>
    <fullName>Department_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS
This is the department that this contact is directly related with.</description>
    <label>Billing Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>Department</relationshipName>
    <type>Lookup</type>
</CustomField>