force-app/main/default/objects/Contact/fields/Details_about_Contact__c.field-meta.xml
<CustomField>
    <fullName>Details_about_Contact__c</fullName>
    <label>Details about Contact</label>
    <type>TextArea</type>
</CustomField>