force-app/main/default/objects/Contact/fields/Do_Not_Sync_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_to_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sync to Marketo</label>
    <type>Checkbox</type>
</CustomField>