force-app/main/default/objects/Contact/fields/Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Contact</label>
    <type>Checkbox</type>
</CustomField>