force-app/main/default/objects/Contact/fields/ECommerce_Convert__c.field-meta.xml
<CustomField>
    <fullName>ECommerce_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECommerce Convert</label>
    <type>Checkbox</type>
</CustomField>