force-app/main/default/objects/Contact/fields/EngagedUsPreviously__c.field-meta.xml
<CustomField>
    <fullName>EngagedUsPreviously__c</fullName>
    <label>Engaged Us Previously?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>