force-app/main/default/objects/Contact/fields/Global_Contact_MQL__c.field-meta.xml
<CustomField>
    <fullName>Global_Contact_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Contact MQL</label>
    <type>Checkbox</type>
</CustomField>