force-app/main/default/objects/Contact/fields/Global_Contact_MQL_Assignment_date__c.field-meta.xml
<CustomField>
    <fullName>Global_Contact_MQL_Assignment_date__c</fullName>
    <label>Global Contact MQL Assignment date</label>
    <type>DateTime</type>
</CustomField>