force-app/main/default/objects/Contact/fields/iMC_Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Contact_Record_ID__c</fullName>
    <label>iMC Contact Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>