force-app/main/default/objects/Contact/fields/Inactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_By__c</fullName>
    <description>Name of person who deleted the account (not really deleted, just inactivated)</description>
    <label>Deleted By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>