force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>