force-app/main/default/objects/Contact/fields/Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_ID__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
This is the unique ID for this contact in billing.</description>
    <externalId>true</externalId>
    <label>Individual ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>