force-app/main/default/objects/Contact/fields/Intro_Program__c.field-meta.xml
<CustomField>
    <fullName>Intro_Program__c</fullName>
    <description>This is to support and simplify the sales teams requirments to add and update members to the Demand Gen program</description>
    <label>Intro Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add to Program</fullName>
            </value>
            <value>
                <fullName>Add to CIO Program</fullName>
            </value>
            <value>
                <fullName>Add to Referral Program</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>