force-app/main/default/objects/Contact/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <description>This field is populated with the date of the last survey sent to the contact.</description>
    <label>Last Survey Date</label>
    <type>Date</type>
</CustomField>