force-app/main/default/objects/Contact/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Shows a lead record that relates to this contact</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Contacts</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>