force-app/main/default/objects/Contact/fields/Lead_Info__c.field-meta.xml
<CustomField>
    <fullName>Lead_Info__c</fullName>
    <label>Lead Info</label>
    <type>TextArea</type>
</CustomField>